# code-brushes-gui

./: .gitignore  README.md  flake.nix  main.py  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 9rf7z9hhnxqvbf5i04labfsxill2zhyl-source  ss2xhhxw58256kpnhv0mdgmbwln4iymp-source
